# water-system-risk-index

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  methodology_notes.md  portfolio_case_study.md  powerbi_data_dictionary.md  pyproject.toml  requirements-api.lock.txt  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: scoring_weights.yaml  sources.yaml
data/powerbi/: DataQualityReport.csv  DimDate.csv  DimRiskTier.csv  DimWaterSystem.csv  FactEnforcementSummary.csv  FactViolationsSummary.csv  data_quality_report.csv
data/processed/: backtest_report.json  data_quality_report.csv  data_quality_report.parquet  fairness_report.json  sensitivity_report.json  water_system_compliance_summary.csv  water_system_compliance_summary.parquet  water_system_enforcement_summary.csv  water_system_enforcement_summary.parquet  water_system_funding_summary.csv  water_system_funding_summary.parquet  water_system_geography.parquet  water_system_master.csv  water_system_master.parquet  water_system_risk_scores.parquet
deploy/nginx/: water-api.example.com.conf  water-api.scottcampbell.io.conf
deploy/systemd/: water-api.service
docs/: dashboard_wireframe.md  data_dictionary.md  deploy.md  implementation_plan.md  limitations.md  methodology.md  model_card.md  portfolio_case_study.md
notebooks/: 01_data_exploration.ipynb  02_scoring_validation.ipynb
src/: __init__.py  backtest.py  build_features.py  clean_water_systems.py  download_data.py  export_powerbi.py  export_web_app_data.py  export_web_map_data.py  fairness_audit.py  geography_tiers.py  load_drought.py  load_sdwis.py  load_service_areas.py  load_srf.py  load_svi.py  load_swap_areas.py  run_pipeline.py  score_risk.py  sensitivity.py  state_config.py  utils.py  validate_outputs.py
tests/: conftest.py  test_api.py  test_data_quality.py  test_features.py  test_scoring.py
waterapi/: __init__.py  cli.py  config.py  load.py  observability.py
waterapi/api/: main.py  models.py
waterapi/db/: __init__.py  engine.py  schema.sql  schema_postgis.sql  schema_trgm.sql
web/: README.md  _headers  app.js  config.js  index.html  styles.css  theme.js
web/data/: ohio_counties.geojson  ohio_map.json
