[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "waterapi"
version = "0.1.0"
description = "FastAPI backend serving the Water System Risk Index from Postgres"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
]

[project.scripts]
waterapi = "waterapi.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "httpx>=0.27",
    "pandas-stubs",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools]
packages = ["waterapi", "waterapi.api", "waterapi.db"]

[tool.pytest.ini_options]
# `pythonpath = ["."]` makes `from src.module import ...` resolve from the repo
# root; tests/conftest.py additionally puts src/ on the path so the modules'
# internal `from utils import ...` style imports resolve.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["web/vendor", "notebooks"]

[tool.ruff.lint]
# pycodestyle, Pyflakes, isort, bugbear, comprehensions, pyupgrade.
select = ["E", "F", "I", "B", "C4", "UP"]
# E501 (line length) is enforced by the formatter; B008 fires on FastAPI's
# Query()/Header() default pattern, which is idiomatic and intended.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["waterapi", "src"]
